--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -218,10 +218,19 @@ visualization-view ajax-loading-indicator {
     width: 400px;
   }
 
-  .content-box {
+  .content-box:not(.search-results-table-container) {
     height: 100%;
     padding: 0;
     margin: 0;
+  }
+
+  .search-results-table-container.content-box {
+    flex: 1 1 auto;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    min-height: 0px;
+    height: 0px; // for IE
   }
 
   .search-results, form {
@@ -238,19 +247,9 @@ visualization-view ajax-loading-indicator {
     }
   }
 
-  &.full-height-table {
-    height: calc(100vh - 225px);
-    padding-bottom: 0;
-    padding-top: 0;
-    overflow-y: hidden;
-
-    .row.full-height {
-      height: calc(100% - 104px);
-
-      > div {
-        height: 100%;
-      }
-    }
+  &.modal-body-min-40x90 {
+    min-width: 900px;
+    min-height: 400px;
   }
 }
 
@@ -269,10 +268,6 @@ visualization-view ajax-loading-indicator {
   .no-search-results {
     padding: 15px;
   }
-}
-
-.search-results-table-container {
-  height: 100%;
 }
 
 [float] {
