YTI-304: Force search table scroll bar to remain visible.

--- a/src/styles/shared/searchTableModalContent.scss
+++ b/src/styles/shared/searchTableModalContent.scss
@@ -53,6 +53,7 @@ div.table-content-container {
 
   .scroller-component {
     flex: 1 1 auto;
+    overflow-y: scroll;
 
     table.content-table {
       tbody {
