YTI-874 Add contact field in datamodel details

--- a/src/app/translations/titles.html
+++ b/src/app/translations/titles.html
@@ -93,3 +93,4 @@
 <div translate>Localname</div><div translate>Localname info</div>
 <div translate>Read-only</div><div translate>Read-only info</div>
 <div translate>API path</div><div translate>API path info</div>
+<div translate>Contact label</div><div translate>Contact label info</div>
