--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -32,6 +32,13 @@
         <non-editable data-title="Modified at" value="$ctrl.model.modifiedAt" context="$ctrl.model"></non-editable>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+      <editable data-title="Contact label" context="$ctrl.model">
+        <textarea id="modelContact" class="form-control" type="text" localized-input context="$ctrl.model" ng-model="$ctrl.model.contact"></textarea>
+      </editable>
+      </div>
+    </div>
 
     <usage-panel id="{{$ctrl.id + '_' + $ctrl.model.id.uri}}" entity="$ctrl.model"></usage-panel>
   </div>
