--- a/src/styles/shared/searchTableModalContent.scss
+++ b/src/styles/shared/searchTableModalContent.scss
@@ -4,6 +4,8 @@ div.table-content-container {
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-width: 900px;
+  position: relative;
 
   table {
     border: 0;
