--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -11,34 +11,26 @@
   </div>
 
   <div class="modal-body" style="min-height: 400px;">
-    <div class="row mb-2 flex-shrink-0">
-      <div class="col-12">
+    <div class="search-table-modal-search-row">
+      <text-filter class="search-row-search-text"
+                   search-text="$ctrl.searchText"
+                   search-controller="$ctrl"
+                   content-extractors="$ctrl.contentExtractors"
+                   placeholder="'search class'"></text-filter>
 
-        <text-filter class="pull-left"
-                     search-text="$ctrl.searchText"
-                     search-controller="$ctrl"
-                     content-extractors="$ctrl.contentExtractors"
-                     placeholder="'search class'"></text-filter>
+      <div class="search-row-selections">
+        <content-filter class="search-row-content-selection"
+                        search-controller="$ctrl"
+                        content-matchers="$ctrl.contentMatchers"
+                        content-extractors="$ctrl.contentExtractors"></content-filter>
 
-        <div class="pull-left mt-2 ml-2">
-          <content-filter search-controller="$ctrl"
-                          content-matchers="$ctrl.contentMatchers"
-                          content-extractors="$ctrl.contentExtractors"></content-filter>
-        </div>
-
-        <div class="pull-left mt-2 ml-3">
+        <div class="search-row-target-selection" ng-hide="$ctrl.onlySelection && !$ctrl.isModelProfile()">
           <label translate>Include:</label>
-        </div>
-
-        <div class="pull-left mt-2 ml-2" ng-hide="$ctrl.onlySelection">
-          <label>
+          <label ng-hide="$ctrl.onlySelection">
             <input type="checkbox" ng-model="$ctrl.showProfiles">
             {{'Classes defined in profiles' | translate}}
           </label>
-        </div>
-
-        <div class="pull-left mt-2 ml-2" ng-if="$ctrl.isModelProfile()">
-          <label>
+          <label ng-if="$ctrl.isModelProfile()">
             <input type="checkbox" ng-model="$ctrl.showOnlyExternalClasses">
             {{'External classes' | translate}}
           </label>
