--- a/src/app/components/editor/searchPredicateTableModal.html
+++ b/src/app/components/editor/searchPredicateTableModal.html
@@ -13,25 +13,24 @@
   </div>
 
   <div class="modal-body" style="min-height: 400px;">
-    <div class="row mb-2 flex-shrink-0">
-      <div class="col-12">
+    <div class="search-table-modal-search-row">
 
-        <text-filter class="pull-left"
-                     search-text="$ctrl.searchText"
-                     search-controller="$ctrl"
-                     content-extractors="$ctrl.contentExtractors"
-                     placeholder="'search ' + $ctrl.type"></text-filter>
+      <text-filter class="search-row-search-text"
+                   search-text="$ctrl.searchText"
+                   search-controller="$ctrl"
+                   content-extractors="$ctrl.contentExtractors"
+                   placeholder="'search ' + $ctrl.type"></text-filter>
 
-        <div class="pull-left mt-2 ml-2">
-          <content-filter search-controller="$ctrl"
-                          content-matchers="$ctrl.contentMatchers"
-                          content-extractors="$ctrl.contentExtractors"></content-filter>
-        </div>
-
-        <excluded-filter search-controller="$ctrl"
-                         search-text="$ctrl.searchText"
-                         exclude="$ctrl.filterExclude"></excluded-filter>
+      <div class="search-row-selections">
+        <content-filter class="search-row-content-selection"
+                        search-controller="$ctrl"
+                        content-matchers="$ctrl.contentMatchers"
+                        content-extractors="$ctrl.contentExtractors"></content-filter>
       </div>
+
+      <excluded-filter search-controller="$ctrl"
+                       search-text="$ctrl.searchText"
+                       exclude="$ctrl.filterExclude"></excluded-filter>
     </div>
 
     <div class="row flex-shrink-0">
