--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -218,6 +218,40 @@ visualization-view ajax-loading-indicator {
     width: 400px;
   }
 
+  .search-table-modal-search-row {
+    flex: 0 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 0.5rem;
+
+    .search-row-search-text {
+    }
+
+    .search-row-selections {
+      flex: 1 1 0px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      label {
+        margin-bottom: 0px;
+      }
+
+      .search-row-content-selection {
+        white-space: nowrap;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+      }
+      .search-row-target-selection {
+        white-space: nowrap;
+        margin-left: 0.5rem;
+        label:not(:first-of-type) {
+          margin-left: 0.5rem;
+        }
+      }
+    }
+  }
+
   .content-box:not(.search-results-table-container) {
     height: 100%;
     padding: 0;
