YTI-908: Hide modified timestamp column if showing external classes in table search modal.

--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -132,6 +132,7 @@
                                             [filter-exclude]="$ctrl.filterExclude"
                                             [search-text]="$ctrl.searchText" [search-results]="$ctrl.searchResults"
                                             [selected-item]="$ctrl.selectedItem" [selection]="$ctrl.selection"
+                                            [show-only-external-classes]="$ctrl.showOnlyExternalClasses"
                                             (item-selected)="$ctrl.selectItem($event)"
                                             [exclude]="$ctrl.exclude">
       </app-search-class-table-modal-content>
