YTI-955 Add "Defined by this model" option in model filter make it default by parameter
This option filters all items defined by this model. Make this option default in search class modal when defaultToCurrentModel variable returns true.

--- a/src/app/components/editor/searchClassModal.html
+++ b/src/app/components/editor/searchClassModal.html
@@ -35,7 +35,7 @@
                       search-controller="$ctrl"
                       type="class"
                       model="$ctrl.model"
-                      default-show="$ctrl.defaultToCurrentModel ? $ctrl.model : null"></model-filter>
+                      default-show="$ctrl.defaultToCurrentModel ? 'definedByThis' : null"></model-filter>
 
         <div class="pull-left mt-2 ml-2">
           <profile-filter search-controller="$ctrl"
