--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -206,6 +206,7 @@
 <div translate>Required</div>
 <div translate>Assigned to this profile</div>
 <div translate>Assigned to this library</div>
+<div translate>Defined by this model</div>
 <div translate>language code</div>
 <div translate>Internal vocabulary</div>
 <div translate>Remove</div>
