Change css class name "menu-col" to "info-col" because it is used with info link icon
This style class is not used with menu anymore because the menu dropdown is moved under the table list.

--- a/src/styles/shared/searchTableModalContent.scss
+++ b/src/styles/shared/searchTableModalContent.scss
@@ -27,7 +27,7 @@ div.table-content-container {
       width: 8%;
     }
 
-    .menu-col {
+    .info-col {
       width: 25px;
       vertical-align: top;
     }
