Fixed style for table search modal modified column when it is sorted and window is really small.

--- a/src/styles/shared/searchTableModalContent.scss
+++ b/src/styles/shared/searchTableModalContent.scss
@@ -47,7 +47,7 @@ div.table-content-container {
           th {
             border-top: 0;
             border-bottom: 0;
-            overflow: hidden;
+            white-space: nowrap;
 
             button {
               padding-left: 0px;
