--- a/src/app/components/form/modelLanguageChooser.html
+++ b/src/app/components/form/modelLanguageChooser.html
@@ -2,7 +2,7 @@
   <button class="btn btn-language" id="data_language_dropdown_button" uib-dropdown-toggle>
     {{$ctrl.localizeLanguageName($ctrl.language)}}
   </button>
-  <div uib-dropdown-menu aria-labelledby="data_language_dropdown_button">
+  <div uib-dropdown-menu aria-labelledby="data_language_dropdown_button" class="dropdown-menu-right">
     <button ng-repeat="option in $ctrl.context.language"
             ng-class="{active: option === $ctrl.language}"
             class="dropdown-item"
