--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -118,31 +118,35 @@
   </editable>
 </div>
 
-<h4 translate>Additional information</h4>
+<div ng-if="!$ctrl.class.unsaved">
 
-<div class="row">
-  <div class="col-md-6">
-    <non-editable data-title="Created at" value="$ctrl.class.createdAt" context="$ctrl.model"></non-editable>
-  </div>
-  <div class="col-md-6">
-    <non-editable data-title="Modified at" value="$ctrl.class.modifiedAt" context="$ctrl.model"></non-editable>
-  </div>
-</div>
+  <h4 translate>Additional information</h4>
 
-<div class="row">
-  <div class="col-md-12">
-    <editable data-title="Editorial note" context="$ctrl.model">
-      <textarea id="editorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.class.editorialNote"></textarea>
-    </editable>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-12">
-    <div ng-show="$ctrl.model.isOfType('profile') && ($ctrl.class.constraint.isVisible() || $ctrl.isEditing())">
-      <editable-constraint id="{{$ctrl.id + '_' + $ctrl.class.id.uri}}" constraint="$ctrl.class.constraint" model="$ctrl.model" class="$ctrl.class"></editable-constraint>
+  <div class="row">
+    <div class="col-md-6">
+      <non-editable data-title="Created at" value="$ctrl.class.createdAt" context="$ctrl.model"></non-editable>
     </div>
-
-    <usage-panel id="{{$ctrl.id + '_' + $ctrl.class.id.uri}}" entity="$ctrl.class" context="$ctrl.model"></usage-panel>
+    <div class="col-md-6">
+      <non-editable data-title="Modified at" value="$ctrl.class.modifiedAt" context="$ctrl.model"></non-editable>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <editable data-title="Editorial note" context="$ctrl.model">
+        <textarea id="editorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.class.editorialNote"></textarea>
+      </editable>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div ng-show="$ctrl.model.isOfType('profile') && ($ctrl.class.constraint.isVisible() || $ctrl.isEditing())">
+        <editable-constraint id="{{$ctrl.id + '_' + $ctrl.class.id.uri}}" constraint="$ctrl.class.constraint" model="$ctrl.model" class="$ctrl.class"></editable-constraint>
+      </div>
+
+      <usage-panel id="{{$ctrl.id + '_' + $ctrl.class.id.uri}}" entity="$ctrl.class" context="$ctrl.model"></usage-panel>
+    </div>
+  </div>
+
 </div>
