--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -319,3 +319,4 @@
 <div translate>Deep shape hit</div>
 <div translate>Deep attribute hit</div>
 <div translate>Deep association hit</div>
+<div translate>Concept status</div>
