--- a/src/app/components/editor/subjectView.html
+++ b/src/app/components/editor/subjectView.html
@@ -26,12 +26,24 @@
           <span>{{$ctrl.entity.subject | translateLabel: $ctrl.model}}</span>
         </h5>
 
-        <non-editable data-title="Concept definition" value="$ctrl.entity.subject.definition"
-                      context="$ctrl.model"></non-editable>
+        <div class="row">
+          <div class="col-md-12">
+              <non-editable data-title="Concept definition" value="$ctrl.entity.subject.definition"
+                            context="$ctrl.model"></non-editable>
+          </div>
+        </div>
 
-        <non-editable-vocabulary vocabulary="$ctrl.entity.subject.vocabulary"
-                                 context="$ctrl.model"
-                                 link="$ctrl.conceptLink"></non-editable-vocabulary>
+        <div class="row">
+          <div class="col-md-6">
+              <non-editable data-title="Concept status" value="$ctrl.entity.subject.status" value-as-localization-key="true"
+                            context="$ctrl.model"></non-editable>
+          </div>
+          <div class="col-md-6">
+              <non-editable-vocabulary vocabulary="$ctrl.entity.subject.vocabulary"
+                                       context="$ctrl.model"
+                                       link="$ctrl.conceptLink"></non-editable-vocabulary>
+          </div>
+        </div>
     </div>
 
   </div>
