--- a/src/app/components/model/conceptForm.html
+++ b/src/app/components/model/conceptForm.html
@@ -17,6 +17,7 @@
     </editable>
 
     <non-editable data-title="Concept id" value="$ctrl.concept.id" context="$ctrl.context" link="$ctrl.concept.href"></non-editable>
+    <non-editable data-title="Concept status" value="$ctrl.concept.status" value-as-localization-key="true" context="$ctrl.context"></non-editable>
 
     <span></span>
     <non-editable-vocabulary vocabulary="$ctrl.concept.vocabulary"></non-editable-vocabulary>
