--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -320,3 +320,4 @@
 <div translate>Deep attribute hit</div>
 <div translate>Deep association hit</div>
 <div translate>Concept status</div>
+<div translate>Concept modified at</div>
