--- a/src/app/components/editor/searchPredicateTableModal.html
+++ b/src/app/components/editor/searchPredicateTableModal.html
@@ -38,7 +38,8 @@
         <model-filter class="pull-left mr-2 mb-2"
                       search-controller="$ctrl"
                       type="predicate"
-                      model="$ctrl.model"></model-filter>
+                      model="$ctrl.model"
+                      model-type='$ctrl.showModelType'></model-filter>
 
         <type-filter class="pull-left mr-2 mb-2"
                      search-controller="$ctrl"
