--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -321,3 +321,12 @@
 <div translate>Deep association hit</div>
 <div translate>Concept status</div>
 <div translate>Concept modified at</div>
+<div translate>ADD EMAIL SUBSCRIPTION TO RESOURCE REGARDING CHANGES?</div>
+<div translate>REMOVE EMAIL SUBSCRIPTION TO RESOURCE?</div>
+<div translate>ARE YOU SURE YOU WANT TO ENABLE THE NOTIFICATION EMAIL SUBSCRIPTION?</div>
+<div translate>ARE YOU SURE YOU WANT TO DISABLE THE NOTIFICATION EMAIL SUBSCRIPTION?</div>
+<div translate>Adding subscription failed.</div>
+<div translate>Subscription deletion failed.</div>
+<div translate>You will receive an email notification when this resource changes.</div>
+<div translate>Add email subscription</div>
+<div translate>Remove email subscription</div>
