--- a/src/app/components/common/export.html
+++ b/src/app/components/common/export.html
@@ -4,7 +4,7 @@
     <span translate>Export</span>
   </button>
 
-  <div uib-dropdown-menu>
+  <div class="dropdown-menu-right" uib-dropdown-menu>
     <div class="dropdown-header">{{'Show' | translate | uppercase}}</div>
 
     <a ng-repeat="download in $ctrl.downloads track by download.name"
