--- a/src/app/components/model/modelMain.scss
+++ b/src/app/components/model/modelMain.scss
@@ -61,3 +61,21 @@
   margin-right: -46px;
   height: 20px;
 }
+
+.subscription-icon {
+
+  font-size: 20pt;
+  padding-right: 20px;
+  padding-left: 20px;
+  color: $primary;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
+}
+
+.subscription {
+  display: inline-block;
+  vertical-align: center;
+  line-height: 42px;
+  height: 42px;
+}
