--- a/src/app/components/model/modelMain.html
+++ b/src/app/components/model/modelMain.html
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="nameButtonRow col-12">
           <h2><span class="mr-4">{{model!.label | translateValue}}</span></h2>
-          <div class="nameButtonRowButton subscription">
+          <div *ngIf="hasSubscription" class="nameButtonRowButton subscription">
             <span class="subscription-icon icon-bell"
                ngbTooltip="{{ 'You will receive an email notification when this resource changes.' | translate }}"></span>
           </div>
