--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -35,6 +35,7 @@
     <div class="row">
       <div class="col-md-12">
       <editable data-title="Contact label" context="$ctrl.model">
+        <p translate>Please note that the content of this field is public. Don't use personal contact information!</p>
         <textarea id="modelContact" class="form-control" type="text" localized-input context="$ctrl.model" ng-model="$ctrl.model.contact"></textarea>
       </editable>
       </div>
