YTI-221 Show icon for class, attribute and association
Also add class icon in search class table view.

--- a/src/app/components/editor/selectionView.html
+++ b/src/app/components/editor/selectionView.html
@@ -2,6 +2,7 @@
 
   <div class="component-header">
     <h3>
+      <i class="glyph-icon" ng-class="$ctrl.editableController.getEditable().glyphIconClass"></i>
       <span>{{$ctrl.editableController.getEditable() | translateLabel: $ctrl.model}}</span>
     </h3>
   </div>
